# rs_processor

./: Cargo.toml
rs_proc_app/: Cargo.toml
rs_proc_app/src/: main.rs
rs_proc_app/src/adapters/api/tools/: heath_check.rs  mod.rs
test/: tests.http
