[package]
name = "rs_proc_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_commons = { git="https://github.com/dimm-com-ua/rs_commons.git" }

rocket = {version="0.5.0-rc.2", features=["json"]}
rocket-basicauth = "2.1.1"
rocket_dyn_templates = {version="0.1.0-rc.2", features=["handlebars", "tera"]}
